# SelfBot-TokenGrabber

./: README.md
SelfBot/: config.json  main.py  pyproject.toml
