[tool.poetry]
name = "repl_python3_Autmn-Selfbot-400-commands"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
colorama = "^0.4.4"
discord = "^1.0.1"
gtts = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
